php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44667 proc_open does not handle pipes with the mode 'wb' correctly
Submitted: 2008-04-08 03:21 UTC Modified: 2008-04-08 09:47 UTC
From: mike at silverorange dot com Assigned: jani (profile)
Status: Closed Package: Program Execution
PHP Version: 5.2CVS-2008-04-08 (CVS) OS: *
Private report: No CVE-ID: None
 [2008-04-08 03:21 UTC] mike at silverorange dot com
Description:
------------
proc_open.c checks if the mode parameter != "w" instead of checking the first character of the mode parameter. This prevents the mode 'wb' from working properly. 

Reproduce code:
---------------
<?php

$pipes = array();

$descriptor_spec = array(
    0 => array('pipe', 'rb'),
    1 => array('pipe', 'wb'),
);

$proc = proc_open('cat', $descriptor_spec, $pipes);

fwrite($pipes[0], 'Hello', 5);
fflush($pipes[0]);
fclose($pipes[0]);

$result = fread($pipes[1], 5);
fclose($pipes[1]);

proc_close($proc);

echo "Result is: ", $result, "\n";

?>

Expected result:
----------------
Result is: Hello


Actual result:
--------------
on stderr:
cat: write error: Bad file descriptor

on stdout:
Result is:


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-04-08 08:22 UTC] jani@php.net
Fixed, need to merge around.
 [2008-04-08 09:47 UTC] jani@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 14 13:00:01 2026 UTC