- Fixed bug #44667 (proc_open does not handle pipes with the mode "wb" correctly)